# M5Stack-ENV-III

./: LICENSE  README.md  pyproject.toml
src/: exceptions.py  sht30.py
src/m5stack/: __init__.py  conversion_utils.py  crc_utils.py  exceptions.py  qmp6988.py  qmp6988_codec.py  sht30.py  sht30_codec.py
